<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/xt_dialog_bg_shape"
    android:orientation="vertical">

    <TextView
        android:id="@+id/xt_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginTop="27dip"
        android:text="@string/xt_phone_register"
        android:textColor="@color/xt_color_zi_black"
        android:textSize="15sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/xt_et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="36dip"
        android:singleLine="true"
        android:layout_marginRight="44dip"
        android:layout_marginTop="20dip"
        android:background="@null"
        android:hint="@string/xt_new_password"
        android:textColor="@color/xt_color_zi_black2"
        android:textColorHint="@color/xt_color_zi_hui2"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="36dip"
        android:layout_marginRight="44dip"
        android:background="@color/xt_color_line_e1" />

    <EditText
        android:id="@+id/xt_et_again_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="36dip"
        android:layout_marginRight="44dip"
        android:layout_marginTop="25dip"
        android:singleLine="true"
        android:background="@null"
        android:hint="@string/xt_again_new_password"
        android:textColor="@color/xt_color_zi_black2"
        android:textColorHint="@color/xt_color_zi_hui2"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="36dip"
        android:layout_marginRight="44dip"
        android:background="@color/xt_color_line_e1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginTop="8dip"
        android:text="@string/xt_password_rule"
        android:textColor="@color/xt_color_zi_hui2"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/xt_tv_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="28dip"
        android:layout_marginTop="12dip"
        android:background="@drawable/xt_btn_round_orange_shape"
        android:paddingBottom="7dip"
        android:paddingLeft="27dip"
        android:paddingRight="27dip"
        android:paddingTop="7dip"
        android:text="@string/xt_complete"
        android:textColor="@color/xt_color_white"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/xt_tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dip"
        android:layout_marginLeft="31dip"
        android:drawableLeft="@drawable/xt_btn_back"
        android:drawablePadding="5dip"
        android:gravity="center"
        android:padding="3dip"
        android:text="@string/xt_back_login"
        android:textColor="@color/xt_color_zi_hui"
        android:textSize="11sp" />

</LinearLayout>