<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/xt_dialog_bg_shape"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dip"
        android:layout_marginRight="18dip"
        android:layout_marginTop="22dip"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/xt_fast_login"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/xt_string_fast_login"
            android:textColor="@drawable/xt_login_color_select"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/xt_phone_login"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/xt_string_phone_login"
            android:textColor="@drawable/xt_login_color_select"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/xt_pwd_login"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/xt_string_pwd_login"
            android:textColor="@drawable/xt_login_color_select"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/xt_one_key_register"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/xt_one_key_register"
            android:textColor="@drawable/xt_login_color_select"
            android:textSize="12sp" />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/xt_login_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>