<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/xt_dialog_bg_shape"
    android:orientation="vertical">

    <TextView
        android:id="@+id/xt_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginTop="27dip"
        android:text="@string/xt_phone_register"
        android:textColor="@color/xt_color_zi_black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/xt_et_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="36dip"
        android:layout_marginRight="44dip"
        android:layout_marginTop="22dip"
        android:background="@null"
        android:hint="@string/xt_input_phone"
        android:singleLine="true"
        android:textColor="@color/xt_color_zi_black2"
        android:textColorHint="@color/xt_color_zi_hui2"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="36dip"
        android:layout_marginRight="44dip"
        android:background="@color/xt_color_line_e1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/xt_et_code"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="36dip"
            android:layout_marginTop="18dip"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/xt_input_verification_code"
            android:singleLine="true"
            android:textColor="@color/xt_color_zi_black2"
            android:textColorHint="@color/xt_color_zi_hui2"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/xt_tv_send"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="44dip"
            android:layout_marginTop="15dip"
            android:background="@drawable/xt_btn_down_bg"
            android:gravity="center"
            android:paddingBottom="7dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="7dip"
            android:text="@string/xt_get_verification_code"
            android:textColor="@color/xt_color_white"
            android:textSize="11sp" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="36dip"
        android:layout_marginRight="44dip"
        android:layout_marginTop="2dip"
        android:background="@color/xt_color_line_e1" />

    <TextView
        android:id="@+id/xt_tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginTop="8dip"
        android:textColor="@color/xt_color_zi_hui2"
        android:textSize="10sp"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/xt_tv_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="28dip"
        android:layout_marginTop="16dip"
        android:background="@drawable/xt_btn_round_orange_shape"
        android:paddingBottom="7dip"
        android:paddingLeft="27dip"
        android:paddingRight="27dip"
        android:paddingTop="7dip"
        android:text="@string/xt_next"
        android:textColor="@color/xt_color_white"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/xt_tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dip"
        android:layout_marginLeft="31dip"
        android:drawableLeft="@drawable/xt_btn_back"
        android:drawablePadding="5dip"
        android:gravity="center"
        android:padding="3dip"
        android:text="@string/xt_back_login"
        android:textColor="@color/xt_color_zi_hui"
        android:textSize="11sp" />

</LinearLayout>