<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/xt_dialog_bg_shape"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip">

        <TextView
            android:id="@+id/xt_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xt_string_set_new_password"
            android:textColor="@color/xt_color_login_select"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/xt_tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/xt_back_login"
            android:textColor="@color/xt_color_login_select"
            android:textSize="14sp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="16dip"
        android:background="@drawable/xt_login_et_bg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/xt_et_new_password"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/xt_new_password"
            android:inputType="textPassword"
            android:paddingBottom="16dip"
            android:paddingLeft="18dip"
            android:paddingRight="18dip"
            android:paddingTop="16dip"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:singleLine="true"
            android:textColor="@color/xt_color_login_select"
            android:textColorHint="@color/xt_color_login_normal"
            android:textSize="12sp" />


        <ImageView
            android:id="@+id/xt_look_new_pwd_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="16dip"
            android:src="@drawable/xt_password_unlook" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="16dip"
        android:background="@drawable/xt_login_et_bg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/xt_et_again_new_password"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/xt_again_new_password"
            android:inputType="textPassword"
            android:paddingBottom="16dip"
            android:paddingLeft="18dip"
            android:paddingRight="18dip"
            android:paddingTop="16dip"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:singleLine="true"
            android:textColor="@color/xt_color_login_select"
            android:textColorHint="@color/xt_color_login_normal"
            android:textSize="12sp" />


        <ImageView
            android:id="@+id/xt_look_again_new_pwd_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="16dip"
            android:src="@drawable/xt_password_unlook" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="8dip"
        android:text="@string/xt_password_rule"
        android:textColor="@color/xt_color_zi_hui2"
        android:textSize="10sp" />


    <TextView
        android:id="@+id/xt_tv_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="25dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="18dip"
        android:background="@drawable/xt_btn_round_orange_shape"
        android:gravity="center"
        android:paddingBottom="11dip"
        android:paddingTop="11dip"
        android:text="@string/xt_determine"
        android:textColor="@color/xt_color_white"
        android:textSize="14sp" />

</LinearLayout>