<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/xt_dialog_bg_shape"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="18dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xt_string_add_small"
            android:textColor="@color/xt_color_login_select"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/xt_tv_switch_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/xt_string_switch_account"
            android:textColor="@color/xt_color_login_select"
            android:textSize="14sp" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/xt_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="42dip"
        android:background="@drawable/xt_login_et_bg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/xt_et_nickname"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/xt_input_nickname"
            android:maxLength="12"
            android:paddingBottom="16dip"
            android:paddingLeft="18dip"
            android:paddingRight="18dip"
            android:paddingTop="16dip"
            android:singleLine="true"
            android:textColor="@color/xt_color_login_select"
            android:textColorHint="@color/xt_color_login_normal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/xt_tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="15dip"
            android:text="0/12"
            android:textColor="@color/xt_color_zi_hui"
            android:textSize="13sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dip"
        android:layout_marginTop="78dip"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/xt_tv_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:layout_weight="1"
            android:background="@drawable/xt_btn_round_gray_shape"
            android:gravity="center"
            android:paddingBottom="8dip"
            android:paddingTop="8dip"
            android:text="@string/xt_cancel"
            android:textColor="@color/xt_color_login_normal"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/xt_tv_submit"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:layout_weight="1"
            android:background="@drawable/xt_btn_round_orange_shape"
            android:gravity="center"
            android:paddingBottom="8dip"
            android:paddingTop="8dip"
            android:text="@string/xt_determine"
            android:textColor="@color/xt_color_white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>